[metadata]
name = promosim
version = 0.0.1
author = Viki Peeva
author_email = peeva.viki@gmail.com
description = A package that contains different similarity metrics for process models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/VikiPeeva/promosim
project_urls =
Bug Tracker = https://github.com/VikiPeeva/promosim/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
   pm4py
   pytest

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*